Correct/update dependency configuration